Switched to JSpecify and NullAway